fixed alignment of workstreams by reducing total width of hero images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,8 +34,8 @@ header nav {
 }
 
 .workstream-text {
-  width: 80%;
-  margin: auto;
+  /* width: 80%; */
+  /* margin: auto; */
 }
 
 .workstream-container {
